<resources>
    <string name="app_name">Messenger</string>
    <string name="login_title">Messenger</string>
    <string name="login_email">Your email:</string>
    <string name="login_password">Your password:</string>
    <string name="login_button">LOGIN</string>
    <string name="login_reset_password">Forgot password</string>
    <string name="login_register">Register</string>
    <string name="title_register">Registration</string>
    <string name="hint_register_email">Email</string>
    <string name="hint_register_password">Password</string>
    <string name="hint_register_name">Name</string>
    <string name="hint_register_lastName">Last name</string>
    <string name="hint_register_age">How old are you?</string>
    <string name="button_register">SIGN UP</string>
    <string name="reset_title">Forgot password?</string>
    <string name="reset_hint">Your email:</string>
    <string name="reset_button">RESET PASSWORD</string>
    <string name="logout">LOGOUT</string>
    <string name="reset_link">The reset link has been succefully sent</string>
    <string name="typy_message">Type your message</string>
</resources>